fix overflow header

--- a/source/sass/templates/cover.scss
+++ b/source/sass/templates/cover.scss
@@ -24,6 +24,7 @@
     position: relative;
     padding-bottom: 13px;
     background-color: #f1f1f1;
+    margin-top: -60px;
 
     &--bg {
       background-image: url("../img/hero-tablet@1x.jpg");
@@ -55,8 +56,9 @@
 
   .cover__top {
     background: none;
-    padding: 154px 0 150px;
+    padding: 213px 0 150px;
     min-height: 626px;
+    border-top: 1px solid $border-primary;
   }
 
   .cover__links {
@@ -102,7 +104,7 @@
   }
 
   .cover__top {
-    padding: 154px 0 150px;
+    padding: 213px 0 150px;
     min-height: 626px;
   }
 }
