--- a/source/sass/templates/nav.scss
+++ b/source/sass/templates/nav.scss
@@ -139,7 +139,6 @@
 
 @media (min-width: $tablet) {
   .nav {
-    border-bottom: 1px solid $border-primary;
     box-shadow: none;
   }
 
@@ -150,8 +149,7 @@
     justify-content: space-between;
     padding: 0 52px;
     max-width: 100%;
-    max-height: 88px;
-    overflow: visible;
+    background-color: transparent;
   }
 
   .nav__toggle {
@@ -239,7 +237,6 @@
   .nav__wrapper {
     padding: 0 50px;
     max-width: 1150px;
-    border-bottom: 1px solid $border-primary;
   }
 
   .nav__item {
